<resources>
    <string name="app_name">MobileAppsCoursework</string>
    <string name="title_home">Home</string>
    <string name="home_welcome_message">Welcome back, <b>%1$s</b>! Ready to log anything?</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_groups">Groups</string>
    <string name="leaderboard_fragment_title"><b>Current Leaderboard</b></string>

    <string name="leaderboard_motivation_text">Want to be higher in the leaderboards? Forgot to log anything today?</string>
    <string name="log_it_home_text">Click to log here</string>
    <string name="home_leaderboard_position">You are currently\n<b>3rd</b>\n in the leaderboard! </string>
    <string name="home_popular_tags">Your popular tags:</string>
    <string name="popular_tag_list"><b>Maths</b>\nEnglish\nGuitar</string>
    <string name="hours_done_text">Hours done today:</string>
    <string name="hours_done_number"><b>3</b></string>
    <string name="hours_done_unit_text">hours.</string>
    <string name="logging_activity_title"><b>Logging Activity</b></string>
    <string name="logging_activity_explanation">Upload your activity details here</string>
    <string name="weekly_goal">Weekly Goal\n42/<b>50</b></string>

    <string name="activity_name_title">Enter the name for this activity here (required)</string>
    <string name="activity_name_text">Learning a new song on guitar</string>
    <string name="activity_description_title">Enter a description for this activity here (required)</string>
    <string name="activity_description_text">Learnt to play another song on guitar using tabs.</string>
    <string name="activity_date_title">Enter date here (required)</string>
    <string name="activity_date_text">27/02/24</string>
    <string name="activity_hours_title">Enter hours done here (required)</string>
    <string name="activity_hours_text">2</string>
    <string name="activity_tag_title">Enter tags here (required)</string>
    <string name="activity_tag_text">Music</string>
    <string name="activity_tag_description">Tags will display below here. Press the \'X\' button to remove them. You\'ll need at least one tag to submit this chunk.</string>
    <string name="chip_1_text">Music</string>
    <string name="chip_2_text">Guitar</string>
    <string name="chip_3_text">Hobby</string>
    <string name="cancel_button">Cancel Upload</string>
    <string name="upload_button">Continue</string>
    <string name="habit_tracker_title">HabitTracker</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_login_details">Enter your login details:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up_text">Dont have an account? Sign up</string>
    <string name="here">here.</string>
    <string name="enter">Enter</string>
    <string name="create_your_account">Create your account:</string>
    <string name="re_type_your_password">Re-type your password</string>
    <string name="enter_your_first_name">Enter first name</string>
    <string name="enter_your_second_name">Enter second name</string>
    <string name="create_account">Create Account</string>
    <string name="back">Back</string>
    <string name="logs">Logs</string>
    <string name="profile">Profile</string>
    <string name="information_here_is_optional">Information here is optional to upload. If you wish to <b>not</b> upload anything more, please press the \'Finish Upload\' button.</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="enter_the_location">Enter the location of this activity </string>
    <string name="finish_upload">Finish Upload</string>
    <string name="previous_logged_activities"><b>Previous Logged Activities</b></string>
    <string name="view_previous_logs_here">View previous logs <b>here</b>:</string>
    <string name="log_details"><b>Log Details</b></string>
    <string name="the_details_for_this_activity_logged">The details for this activity logged:</string>
    <string name="title_here">title here</string>
    <string name="hours_carried_out">Hours carried out:</string>
    <string name="edit">Edit</string>
    <string name="cancel_update">Cancel</string>
    <string name="confirm_update">Confirm Edit</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="export">Export</string>
    <string name="currently_showing_all">Currently Showing All Logs</string>
    <string name="date_range">From <b>%1$s</b> to <b>%2$s</b></string>
    <string name="leaderboard_position_below">Hello <b>%1$s</b>, you are %2$s hours behind <b>%3$s</b>.\nThese leaderboards reset weekly.</string>
    <string name="leaderboard_position_win">Hello <b>%1$s</b>, you are at the top of the leaderboard!\nThese leaderboards reset weekly.</string>
    <string name="leaderboard_position_na">Hello <b>%1$s</b>, you are currently not on the leaderboard.\nThese leaderboards reset weekly.</string>
    <string name="change_weekly_goal">Change Weekly Goal</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="pokemon"><b>Pokemon</b></string>
    <string name="badges_earned">How many hours have you logged?\nBadges Earned:</string>
    <string name="profile_details"><b>Profile Details</b></string>
    <string name="name">Name:</string>
    <string name="weekly_wins_earned">Weekly Wins Earned:</string>
    <string name="total_hours_logged">Total Hours Logged:</string>
</resources>