<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/leaderboard_icon"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/groups_icon"
        android:title="@string/title_groups" />

    <item
        android:id="@+id/navigation_logs"
        android:icon="@drawable/logs_icon"
        android:title="@string/logs" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />


</menu>