<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/logging_chunks_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logging_activity_title"
        android:textSize="40sp"
        android:paddingTop="10sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/logging_chunks_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logging_activity_explanation"
        android:textSize="22sp"
        android:paddingTop="10sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/logging_chunks_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chunk_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_name_title"
        app:layout_constraintTop_toBottomOf="@id/logging_chunks_text_view"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chunk_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chunk_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_description_title"
        app:layout_constraintTop_toBottomOf="@id/chunk_title"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chunk_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_halfway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chunk_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_date_title"
        app:layout_constraintTop_toBottomOf="@id/chunk_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_halfway">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chunk_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:cursorVisible="false"
            android:onClick="onDateFieldClicked" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chunk_hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_hours_title"
        app:layout_constraintTop_toBottomOf="@id/chunk_description"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_halfway"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chunk_hours_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:cursorVisible="false"
            android:onClick="onHoursFieldClicked"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chunk_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_tag_title"
        app:layout_constraintTop_toBottomOf="@id/chunk_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/chunk_tags_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tags_description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_tag_description"
        android:textSize="18sp"
        android:paddingTop="10sp"
        android:paddingHorizontal="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/chunk_tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tags_chip_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@id/tags_description_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_button">
    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/cancel_button"
        app:icon="@drawable/back_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/upload_button"
        app:icon="@drawable/tick_icon"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>