<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/logging_chunks_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logging_activity_title"
        android:textSize="40sp"
        android:paddingTop="10sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/logging_chunks_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logging_activity_explanation"
        android:textSize="22sp"
        android:paddingTop="10sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/logging_chunks_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/optional_description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/information_here_is_optional"
        android:textSize="18sp"
        android:paddingTop="10sp"
        android:paddingHorizontal="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/logging_chunks_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/picture_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:adjustViewBounds="true"
        android:background="@drawable/shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optional_description_text_view"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
        />

    <Button
        android:id="@+id/upload_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_picture"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/picture_image_view"
        app:layout_constraintEnd_toEndOf="@id/picture_image_view"
        app:layout_constraintTop_toBottomOf="@id/picture_image_view"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chunk_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_the_location"
        app:layout_constraintTop_toBottomOf="@id/upload_picture_button"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chunk_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/finish_upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/finish_upload"
        android:textSize="20dp"
        app:icon="@drawable/tick_icon"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>