<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_welcome_message"
        android:textSize="22sp"
        android:paddingTop="10sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/log_it_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_it_home_text"
        android:layout_margin="10dp"
        android:textSize="27sp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_halfway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <FrameLayout
        android:id="@+id/leaderboard_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/log_it_button"
        app:layout_constraintStart_toStartOf="@id/log_it_button"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_halfway"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal">

        <TextView
            android:id="@+id/leaderboard_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:elevation="20dp"
            android:text="@string/home_leaderboard_position"
            android:textSize="20sp"
            android:background="@drawable/shadow"
            app:drawableTopCompat="@drawable/leaderboard_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/popular_tags_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@id/log_it_button"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_halfway"
        app:layout_constraintEnd_toEndOf="@id/log_it_button"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/popular_tags_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:text="@string/home_popular_tags"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_tag_list"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/hours_done_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintStart_toStartOf="@id/log_it_button"
        app:layout_constraintBottom_toTopOf="@id/graph_line_chart">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="2dp">

            <TextView
                android:id="@+id/hours_done_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_done_text"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/hours_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_done_number"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/hours_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_done_unit_text"
                android:textSize="23sp"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/weekly_goal_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/popular_tags_frame_layout"
        app:layout_constraintStart_toEndOf="@id/hours_done_frame_layout"
        app:layout_constraintEnd_toEndOf="@id/popular_tags_frame_layout"
        app:layout_constraintBottom_toTopOf="@id/graph_line_chart">

        <TextView
            android:id="@+id/weekly_goal_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:elevation="20dp"
            android:text="@string/weekly_goal"
            android:textSize="20sp"
            android:background="@drawable/shadow"/>
    </FrameLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph_line_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/hours_done_frame_layout"
        app:layout_constraintStart_toStartOf="@id/log_it_button"
        app:layout_constraintEnd_toEndOf="@id/log_it_button"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>