<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/gradient_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/wave_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/habit_tracker_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/habit_tracker_title"
        android:textSize="40dp"
        android:textColor="@color/md_theme_inverseOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"/>

    <ImageView
        android:id="@+id/wave_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/wave_file"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/habit_tracker_title"/>

    <ImageView
        android:id="@+id/login_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/wave_image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/login_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/enter_your_login_details"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wave_image_view"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_email"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="@id/login_title"
        app:layout_constraintEnd_toEndOf="@id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_password"
        app:layout_constraintTop_toBottomOf="@id/email_text_layout"
        app:layout_constraintStart_toStartOf="@id/login_title"
        app:layout_constraintEnd_toEndOf="@id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="20dp"
        android:text="@string/enter"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/password_text_layout"/>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/sign_up_text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/password_text_layout"
        app:layout_constraintTop_toBottomOf="@id/password_text_layout"/>

    <Button
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/sign_up_text"
        app:layout_constraintTop_toTopOf="@id/sign_up_text"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>