<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/previous_logs_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/previous_logged_activities"
        android:textSize="40sp"
        android:paddingTop="10sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/previous_logs_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/view_previous_logs_here"
        android:textSize="22sp"
        android:paddingTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/previous_logs_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refresh_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:srcCompat="@drawable/refresh_icon"
        app:layout_constraintEnd_toEndOf="@id/previous_logs_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/previous_logs_text_view"
        app:layout_constraintBottom_toTopOf="@id/previous_logs_recycler_view"
        />

    <Button
        android:id="@+id/range_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date_range"
        app:layout_constraintTop_toTopOf="@id/refresh_button"
        app:layout_constraintBottom_toBottomOf="@+id/refresh_button"
        app:layout_constraintStart_toStartOf="@id/previous_logs_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previous_logs_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="@id/previous_logs_text_view"
        app:layout_constraintEnd_toEndOf="@id/previous_logs_text_view"
        app:layout_constraintTop_toBottomOf="@id/refresh_button"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>